@@ -346,3 +346,15 @@
  # v10.0
  pm_high_speed_electric_trains:0 "Скоростные электропоезда"
  pm_high_speed_diesel_trains:0 "Скоростные тепловозы"
+ 
+ building_sugar_substitute_factory:0 "Завод сахарозаменителей"
+ pmg_sugar_sub_base:0 "$pm_base$"
+ pm_fructose:0 "Фруктоза"
+ pm_saccharin:0 "Сахарин"
+ 
+ fructose:0 "Фруктоза"
+ fructose_desc:0 "Фруктоза - это натуральный подсластитель, получаемый из фруктов."
+ saccharin:0 "Сахарин"
+ saccharin_desc:0 "Сахарин - это искусственный подсластитель, получаемый из кислот, содержащих серу и углерод."
+ 
+ assembly_lines_desc:0 "Сборочная линия - это производственный процесс, в ходе которого детали добавляются по мере перемещения полуфабриката сборки с рабочей станции на другую рабочую станцию, где детали добавляются последовательно до получения конечного изделия."
